<resources>
    <string name="app_name">jmart-android</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Name">Name</string>
    <string name="lowest_price">Lowest Price</string>
    <string name="highest_price">Highest Price</string>
    <string name="account_details">Account Details</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="balance">Balance</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Register</string>
    <string name="search">search</string>
    <string name="addbox">addBox</string>
    <string name="person">Person</string>
    <string name="product_name">Product Name</string>
    <string name="weight">Weight</string>
    <string name="condition">Condition</string>
    <string name="discount">Discount</string>
    <string name="shipmen_plan">Shipmen Plan</string>
    <string name="category">Category</string>
    <string name="shipment_plan">Shipment plan</string>
    <string name="invoice">Invoice</string>
    <string name="store">Store</string>
    <string name="status">Status</string>
    <string name="date">Date</string>
    <string name="cost">Cost</string>


    <string-array name="shipmentPlans">
        <item>INSTANT</item>
        <item>SAME DAY</item>
        <item>NEXT DAY</item>
        <item>REGULER</item>
        <item>KARGO</item>
    </string-array>

    <string-array name="category">
        <item>BOOK</item>
        <item>KITCHEN</item>
        <item>ELECTRONIC</item>
        <item>FASHION</item>
        <item>GAMING</item>
        <item>GADGET</item>
        <item>MOTHERCARE</item>
        <item>COSMETICS</item>
        <item>HEALTHCARE</item>
        <item>FURNITURE</item>
        <item>JEWELRY</item>
        <item>TOYS</item>
        <item>FNB</item>
        <item>STATIONERY</item>
        <item>SPORTS</item>
        <item>AUTOMOTIVE</item>
        <item>PETCARE</item>
        <item>ART_CRAFT</item>
        <item>CARPENTRY</item>
        <item>MISCELLANEOUS</item>
        <item>PROPERTY</item>
        <item>TRAVEL</item>
        <item>WEDDING</item>
    </string-array>
</resources>